@startuml Expressions
skinparam style strictuml
skinparam monochrome false

interface ASTNode #b1e8f0 {
    getLine(): int
    getColumn(): int
}

interface Expression {
    type: Type
    definition: Definition
    lValue: boolean
}

class IntLiteral {
    value: int
}

class DoubleLiteral {
    value: double
}

class CharLiteral {
    value: char
}

class Variable {
    name: String
    definition: Definition
}

class ArithmeticOperation {
    op: String
    leftExpression: Expression
    rightExpression: Expression
}

' <, >, <=, >=
class ComparisonOperation {
    op: String
    leftExpression: Expression
    rightExpression: Expression
}

' ||, &&
class BooleanOperation {
    op: String
    leftExpression: Expression
    rightExpression: Expression
}

class Cast {
    leftExpression: Expression
}

class Invocation {
    expression : Expression
    arguments : List<Expression>
}

class BooleanNot {
    expression : Expression
}

class Indexing {
    array : Expression
    index : Expression
}

class StructAccess {
    struct : Expression
    index : String
}

ASTNode <|-- Expression
Expression <|.. IntLiteral
Expression <|.. DoubleLiteral
Expression <|.. CharLiteral
Expression <|.. Variable
Expression <|.. ArithmeticOperation
Expression <|.. ComparisonOperation
Expression <|.. BooleanOperation
Expression <|.. Cast
Expression <|.. Invocation
Expression <|.. BooleanNot
Expression <|.. Indexing
Expression <|.. StructAccess

ArithmeticOperation o--"2" Expression
BooleanOperation o--"2" Expression
ComparisonOperation o--"2" Expression
Cast o--"1" Expression
Invocation o--"1" Expression
BooleanNot o--"1" Expression
Indexing o--"2" Expression
StructAccess o--"1" Expression

@enduml
